--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -3,12 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Dom learning</title>
+    <style>
+        .bg-black{
+            background-color: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
+<body  class="bg-black" >
     <!-- DOM => DOCUMENT OBJECT MODEL -->
-    <div class="bg-black">
-        <h1 class="heading">DOM learning on Chai aur code</h1>
-        <p>Lorem ipsum dolor sit amet.</p>
+    <div>
+        <h1 id="title" class="heading">DOM learning on Chai aur code <span style="display: none;">test text</span></h1>
+        
+        <h2>Lorem, ipsum dolor.</h2>
+        <h2>Cum, sed deserunt?</h2>
+        <h2>Voluptas, nulla rerum?</h2>
+        <input type="password" name="" id="">
+
+        <p>Lorem ipsum dolor sit </p>
+
+        <ul>
+            <li class="list-item">Lorem, ipsum dolor.</li>
+            <li class="list-item">Libero, repellendus cumque!</li>
+            <li class="list-item">Animi, deserunt ratione!</li>
+        </ul>
+
     </div>
 </body>
 </html>
