--- a/06_dom/three.html
+++ b/06_dom/three.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM | Chai aur code </title>
+    <title> Chai aur code </title>
 </head>
 <body style="background-color: #212121; color: #fff;">
 
-    
-    
 </body>
+<script>
+    const div = document.createElement('div')
+    console.log(div);
+    div.className = "main"
+    div.id = Math.round(Math.random() * 10 +1)
+    div.setAttribute("title", "generated title")
+    div.style.backgroundColor = "green"
+    div.style.padding = "12px"
+    // div.innerText = "Chai or code"
+    const addText = document.createTextNode("Chai aur code")
+    div.appendChild(addText)
+    document.body.appendChild(div)
+</script>
 </html>
